[project]
dependencies = [
    "matplotlib >= 3.10.8",
    "numpy >= 1.26.4",
    "pandas >= 3.0.0",
    "torch >= 2.10.0",
    "scikit-learn >= 1.8.0",
]

name = "pulse-autoencoder"
dynamic = ["version", "readme"]
description = "Pulse Autoencoder for voltage breakdown prediction"
license = { text = "Other/Proprietary License" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = "~=3.11"

[[project.authors]]
name = "Niki Gallou"

[project.urls]
homepage = "https://github.com/ng-ngallou/pulse-autoencoder"
documentation = "https://github.com/ng-ngallou/pulse-autoencoder/docs/stable"
repository = "https://github.com/ng-ngallou/pulse-autoencoder"
changelog = "https://github.com/ng-ngallou/pulse-autoencoder/-/releases"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "ucap-python-testing"]
doc = ["acc-py-sphinx", "myst-parser", "sphinx-copybutton"]
dev = ["pre-commit", "ruff", "mypy"]

[build-system]
requires = ["setuptools >= 61", "setuptools-scm[toml] ~= 6.0", "wheel"]
build-backend = "setuptools.build_meta"

# keep this for dynamic versioning
[tool.setuptools_scm]
write_to = "pulse_autoencoder/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["."]
include = ["pulse_autoencoder*"]
namespaces = false

[tool.setuptools.package-data]
pulse_autoencoder = ["py.typed"]

[project.scripts]
# project endpoints here
train_cnn = "pulse_autoencoder.cnn.pipeline.training:main"
train_autoencoder = "pulse_autoencoder.autoencoder.training:main"

# include black configuration for easy to use with VSCode and PyCharm
# autoformatter
# For pre-commit, only ruff is used.
[tool.black]
target-version = ["py311"]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
]

line-length = 88         # black and ruff default
target-version = "py311"

[tool.ruff.lint]
# All rules can be found here: https://docs.astral.sh/ruff/rules/
select = [
    "F",   # pyflakes
    "E",   # error  (pycodestyle)
    "W",   # warning (pycodestyle)
    "I",   # isort
    "N",   # naming  (pep8)
    "UP",  # pyupgrade
    "PLC", # convention  (pylint)
    "PLE", # error  (pylint)
    "PLW", # warning  (pylint)
    "PLR", # refactor  (pylint)
    # "D",  # docstring (pydocstyle),  # not enabled by default
    "PD",   # pandas
    "TRY",  # tryceratops
    "NPY",  # numpy
    "PERF", # perflint
    "RUF",  # ruff
    # v flake8 v
    "B",
    "C4",
    "FBT",
    "A",
    "EM",
    "ISC",
    "FA",
    "G",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
]
fixable = ["ALL"]
ignore = ["E501", "W505", "ISC001", "RET504", "G004", "PD901", "PLR0915", "EM101", "TRY003", "RUF001"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
disallow_untyped_defs = true
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true

# for pyright LSP
[tool.pyright]
reportPrivateImportUsage = "none"
